<resources>
    <string name="app_name">AppKEA4MaterialDesign</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valnavprincipal">Principal</string>
    <string name="valnavgaleria">Galeria</string>
    <string name="valnavnotificaciones">Notificaciones</string>
    <string name="titulofragprincipal">FORMULARIO FRAGMENT</string>
    <string name="valetusuario">Ingrese su usuario</string>
    <string name="valetpassword">Ingrese su password</string>
    <string name="valrggenero">Seleccione su género:</string>
    <string name="valrbmasculino">Masculino</string>
    <string name="valrbfemenino">Femenino</string>
    <string name="valbtnregistrar">REGISTRAR</string>
</resources>